--- a/package.json
+++ b/package.json
@@ -4,22 +4,18 @@
   "private": true,
   "homepage": "https://Dimmac.github.io/goit-react-hw-05-movies/",
   "dependencies": {
-    "@emotion/react": "^11.8.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "react": "^17.0.2",
+    "react-awesome-spinners": "^1.3.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-loader-spinner": "^5.1.4",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "react-spinners": "^0.11.0",
     "react-toastify": "^8.2.0",
-    "styled-components": "^5.3.3",
-    "sweetalert2": "^11.4.0",
-    "web-vitals": "^2.1.3"
+    "styled-components": "^5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
